--- a/notes.html
+++ b/notes.html
@@ -10,15 +10,15 @@
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>Let's talk about music!</b></p>
 <p><b>The first part will cover some concepts, which I will try to whip-though, so we can get to the algorithms.</b></p>
-<p><b>These slides are live at the link on the bottom of the pages, if you want to follow along or reread what just happened.</b></p>
+<p><b>These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.</b></p>
 </div>
-<p><b>2.</b> What this is NOT about</p>
+<p><b>2.</b> What this IS about</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>3.</b> Sorry!</p>
-<p><b>4.</b> What this IS about</p>
+<p><b>3.</b> What this is NOT about</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
+<p><b>4.</b> Sorry!</p>
 <p><b>5.</b> Fundamental Questions</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.</b></p>
