--- a/notes.html
+++ b/notes.html
@@ -19,63 +19,70 @@
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
 <p><b>4.</b> Sorry!</p>
-<p><b>5.</b> Fundamental Questions</p>
+<div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
+<p><b>This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc.</b></p>
+<p><b>But it took way too long before getting to the algorithms!</b></p>
+</div>
+<p><b>5.</b> Why Do Algorithmic Music?</p>
+<div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
+</div>
+<p><b>6.</b> Fundamental Questions</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.</b></p>
-<p><b>If we don't care about traditions, then anything goes! The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar</b></p>
+<p><b>If we don't care about traditions, then anything goes! The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar.</b></p>
 <p><b>There are as many answers as there are musicians.</b></p>
 </div>
-<p><b>6.</b> Task::MusicBundle Modules</p>
+<p><b>7.</b> Task::MusicBundle Modules</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>Linked music construction modules are those mentioned in this presentation.</b></p>
 </div>
-<p><b>7.</b> Basic Algorithms 1 of 2</p>
+<p><b>8.</b> Basic Algorithms 1 of 2</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>8.</b> Basic Algorithms 2 of 2</p>
+<p><b>9.</b> Basic Algorithms 2 of 2</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>9.</b> Audio Example 1</p>
+<p><b>10.</b> Audio Example 1</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>10.</b> Basic Algorithms 1 of 3</p>
+<p><b>11.</b> Basic Algorithms 1 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>11.</b> Basic Algorithms 2 of 3</p>
+<p><b>12.</b> Basic Algorithms 2 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>12.</b> Basic Algorithms 3 of 3</p>
+<p><b>13.</b> Basic Algorithms 3 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>13.</b> Audio Example 2</p>
+<p><b>14.</b> Audio Example 2</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>14.</b> Basic Algorithms 1 of 2</p>
+<p><b>15.</b> Basic Algorithms 1 of 2</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>15.</b> Basic Algorithms 2 of 2</p>
+<p><b>16.</b> Basic Algorithms 2 of 2</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>16.</b> Audio Example 3</p>
+<p><b>17.</b> Audio Example 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>17.</b> Groove-Tool</p>
+<p><b>18.</b> Groove-Tool</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>18.</b> Instantiate a Drummer</p>
+<p><b>19.</b> Instantiate a Drummer</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>19.</b> Figured Bass Part 1 of 3</p>
+<p><b>20.</b> Figured Bass Part 1 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>20.</b> Figured Bass Part 2 of 3</p>
+<p><b>21.</b> Figured Bass Part 2 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>Music::VoiceGen module by Jeremy Mates (AKA thrig) - I know you're out there!</b></p>
 </div>
-<p><b>21.</b> Figured Bass Part 3 of 3</p>
+<p><b>22.</b> Figured Bass Part 3 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
-<p><b>22.</b> Links</p>
+<p><b>23.</b> Links</p>
 
 </body>
 </html>
