--- a/notes.html
+++ b/notes.html
@@ -23,7 +23,7 @@
 <p><b>This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc.</b></p>
 <p><b>But it took way too long before getting to the algorithms!</b></p>
 </div>
-<p><b>5.</b> Why Do Algorithmic Music?</p>
+<p><b>5.</b> Why Make Algorithmic Music?</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
 <p><b>6.</b> Fundamental Questions</p>
