--- a/notes.html
+++ b/notes.html
@@ -50,6 +50,7 @@
 </div>
 <p><b>12.</b> Basic Algorithms 2 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
+<p><b>Also we can get midinum pitches by just adding 60 to any sequence of digits.</b></p>
 </div>
 <p><b>13.</b> Basic Algorithms 3 of 3</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
