--- a/notes.html
+++ b/notes.html
@@ -30,7 +30,7 @@
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.</b></p>
 <p><b>If we don't care about traditions, then anything goes! The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar.</b></p>
-<p><b>There are as many answers as there are musicians.</b></p>
+<p><b>There are as many answers as there are musicians. And there are probably more ways to make algorithmic music than there are programmers.</b></p>
 </div>
 <p><b>7.</b> Task::MusicBundle Modules</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
