--- a/notes.html
+++ b/notes.html
@@ -11,6 +11,7 @@
 <p><b>Let's talk about music!</b></p>
 <p><b>The first part will cover some concepts, which I will try to whip-though, so we can get to the algorithms.</b></p>
 <p><b>These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.</b></p>
+<p><b>Also my cards have a QR link to my github page that has a link to this slideshow.</b></p>
 </div>
 <p><b>2.</b> What this IS about</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
@@ -21,7 +22,7 @@
 <p><b>4.</b> Sorry!</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc.</b></p>
-<p><b>But it took way too long before getting to the algorithms!</b></p>
+<p><b>But it took way too long!</b></p>
 </div>
 <p><b>5.</b> Why Make Algorithmic Music?</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
