--- a/notes.html
+++ b/notes.html
@@ -21,8 +21,7 @@
 </div>
 <p><b>4.</b> Sorry!</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
-<p><b>This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc.</b></p>
-<p><b>But it took way too long!</b></p>
+<p><b>This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc. But it took way too long!</b></p>
 </div>
 <p><b>5.</b> Why Make Algorithmic Music?</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
