--- a/notes.html
+++ b/notes.html
@@ -35,7 +35,7 @@
 </div>
 <p><b>7.</b> Task::MusicBundle Modules</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
-<p><b>Linked music construction modules are those mentioned in this presentation.</b></p>
+<p><b>Linked modules are those mentioned in this presentation.</b></p>
 </div>
 <p><b>8.</b> Basic Algorithms 1 of 2</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
