--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Also my cards have a QR link to my github page that has a link to this slideshow
 
 </p></li><li level="1"><p>How do you structure a tune?
 
-</p><></><div class="notes">These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
+</p></li></ul class="incremental"><div class="notes">These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
 
 If we don't care about traditions, then anything goes. And MIDI is probably not your thing.
 
@@ -333,4 +333,4 @@ and includes the partially algorithmic tune
 "<a href="https://www.youtube.com/watch?v=dhXMhaMcgag">Permutational</a>"
 - Check it out!
 
-</p></li></ul class="incremental"></div></body></html>
+</p></div></body></html>
