--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ sub treble {
 <div class="slide">
 <h1>Basic Algorithms 1 of 3
 
-</h1><p>&#x2022; <b>Using random pitches instead of static</b>
+</h1><p>&#x2022; <b>Use random pitches instead of static</b>
 
 </p><pre>use MIDI::Util qw(setup_score set_chan_patch); # New import
 use Music::Scales qw(get_scale_MIDI);          # New module
