--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Also my cards have a QR link to my github page that has a link to this slideshow
 </h1><p><img src="https://placekitten.com/500/500" />
 
 
-</p><div class="notes">This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc. But it took way too long! </div></div>
+</p><div class="notes">This used to have a bunch more words: concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo. </div></div>
 <div class="slide">
 <h1>Why Make Algorithmic Music?
 
