--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ The first part will cover some concepts, which I will try to whip-though, so we 
 
 These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.
 
-Also my cards have a QR link to my github page that has a link to this slideshow. </div></div>
+Also my cards have a QR link to my github that has a link to this slideshow. </div></div>
 <div class="slide">
 <h1>What this IS about
 
