--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ These slides are live at my github link on the bottom of each page, if you want 
 
 Also my cards have a QR link to my github that has a link to this slideshow. </div></div>
 <div class="slide">
-<h1>What this IS about
+<h1>What this *is* about
 
 </h1><ul class="incremental"><li level="1"><p>Applied music theory
 
@@ -83,7 +83,7 @@ Also my cards have a QR link to my github that has a link to this slideshow. </d
 
 </p></li></ul class="incremental"><div class="notes">... </div></div>
 <div class="slide">
-<h1>What this is NOT about
+<h1>What this is *not* about
 
 </h1><ul class="incremental"><li level="1"><p>Song or audio <i>analysis</i>
 
