--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ img#me05 {top: 43px;left: 36px;}
 </div><div class="slide">
 <h1>Algorithmic Music with Perl
 
-</h1><p><img src="https://ology.net/images/perl-gene.jpg" />
+</h1><p><img src="https://ology.github.io/Perl-Algorithmic-Music/github-qr.jpg" />
  <a href="https://github.com/ology">Gene Boggs</a>
 
 </p><audio controls><source type="audio/mp3" src="audio/Eno-2_2.mp3"></audio>
