--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ img#me05 {top: 43px;left: 36px;}
 </div><div class="slide">
 <h1>Algorithmic Music with Perl
 
-</h1><p><img src="https://ology.github.io/Perl-Algorithmic-Music/github-qr.jpg" />
+</h1><p><img src="https://ology.net/images/perl-gene.jpg" />
  <a href="https://github.com/ology">Gene Boggs</a>
 
 </p><audio controls><source type="audio/mp3" src="audio/Eno-2_2.mp3"></audio>
@@ -68,6 +68,13 @@ The first part will cover some concepts, which I will try to whip-though, so we 
 These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.
 
 Also my cards have a QR link to my github that has a link to this slideshow. </div></div>
+<div class="slide">
+<h1>GitHub link to talk
+
+</h1><p><img src="https://ology.github.io/Perl-Algorithmic-Music/github-qr.jpg" />
+
+
+</p><div class="notes">... </div></div>
 <div class="slide">
 <h1>What this *is* about
 
