--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ These slides are live at my github link on the bottom of each page, if you want 
 
 Also my cards have a QR link to my github that has a link to this slideshow. </div></div>
 <div class="slide">
-<h1>GitHub link to talk
+<h1>GitHub link to presentation
 
 </h1><p><img src="https://ology.github.io/Perl-Algorithmic-Music/github-qr.jpg" />
 
