--- a/notes.html
+++ b/notes.html
@@ -13,7 +13,7 @@
 <p><b>These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.</b></p>
 <p><b>Also my cards have a QR link to my github that has a link to this slideshow.</b></p>
 </div>
-<p><b>2.</b> GitHub link to talk</p>
+<p><b>2.</b> GitHub link to presentation</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 </div>
 <p><b>3.</b> What this *is* about</p>
