--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@ img#me05 {top: 43px;left: 36px;}
 
 The first part will cover some concepts, which I will try to whip-though, so we can get to the algorithms.
 
-These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.
-
-Also my cards have a QR link to my github that has a link to this slideshow. </div></div>
+If you want to follow along or reread what just happened, these slides are live at the link on the bottom of the pages. </div></div>
 <div class="slide">
 <h1>What this *is* about
 
@@ -102,7 +100,7 @@ Also my cards have a QR link to my github that has a link to this slideshow. </d
 </h1><p><img src="https://placekitten.com/500/500" />
 
 
-</p><div class="notes">This used to have a bunch more words: concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo. </div></div>
+</p><div class="notes">Also, this used to have a bunch of concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo. </div></div>
 <div class="slide">
 <h1>Why Make Algorithmic Music?
 
@@ -128,9 +126,9 @@ Also my cards have a QR link to my github that has a link to this slideshow. </d
 
 </p></li></ul class="incremental"><div class="notes">These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
 
-If we don't care about traditions, then anything goes. And MIDI is probably not your thing.
+But if we don't care about traditions, then anything goes. And MIDI is probably not your thing.
 
-The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar.
+The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar solos.
 
 There are as many answers as there are musicians. (And there are more ways to make algorithmic music than there are programmers.) </div></div>
 <div class="slide">
@@ -178,7 +176,9 @@ sub treble {
 </h1><p></p>
 <audio controls><source type="audio/mp3" src="audio/1-otj.mp3"></audio>
 
-<div class="notes">... </div></div>
+<p>Made with <code>timidity</code>, <code>ffmpeg</code>, and <code>lame</code>.
+
+</p><div class="notes">... </div></div>
 <div class="slide">
 <h1>Basic Algorithms 1 of 3
 
