--- a/notes.html
+++ b/notes.html
@@ -10,8 +10,7 @@
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>Let's talk about music!</b></p>
 <p><b>The first part will cover some concepts, which I will try to whip-though, so we can get to the algorithms.</b></p>
-<p><b>These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.</b></p>
-<p><b>Also my cards have a QR link to my github that has a link to this slideshow.</b></p>
+<p><b>If you want to follow along or reread what just happened, these slides are live at the link on the bottom of the pages.</b></p>
 </div>
 <p><b>2.</b> What this *is* about</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
@@ -21,7 +20,7 @@
 </div>
 <p><b>4.</b> Sorry!</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
-<p><b>This used to have a bunch more words: concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo.</b></p>
+<p><b>Also, this used to have a bunch of concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo.</b></p>
 </div>
 <p><b>5.</b> Why Make Algorithmic Music?</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
@@ -29,8 +28,8 @@
 <p><b>6.</b> Fundamental Questions</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.</b></p>
-<p><b>If we don't care about traditions, then anything goes. And MIDI is probably not your thing.</b></p>
-<p><b>The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar.</b></p>
+<p><b>But if we don't care about traditions, then anything goes. And MIDI is probably not your thing.</b></p>
+<p><b>The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar solos.</b></p>
 <p><b>There are as many answers as there are musicians. (And there are more ways to make algorithmic music than there are programmers.)</b></p>
 </div>
 <p><b>7.</b> Task::MusicBundle Modules</p>
