--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@ sub treble {
 </h1><p></p>
 <audio controls><source type="audio/mp3" src="audio/1-otj.mp3"></audio>
 
-<p>Made with <code>timidity</code>, <code>ffmpeg</code>, and <code>lame</code>.
-
-</p><div class="notes">... </div></div>
+<pre>> rm -f audio/2-random.mp3 ; timidity -c timidity.cfg -A10a code/2-random.pl.mid -Ow -o - | ffmpeg -i - -acodec libmp3lame -ab 64k audio/2-random.mp3 </pre><div class="notes">... </div></div>
 <div class="slide">
 <h1>Basic Algorithms 1 of 3
 
