--- a/index.html
+++ b/index.html
@@ -307,7 +307,11 @@ my $voice = Music::VoiceGen->new(
 );
 
 # main phrase voices
-my @voices1 = map { $voice->rand } $motifs[0]->@*; </pre><div class="notes">Music::VoiceGen module by Jeremy Mates (AKA thrig) - I know you're out there! </div></div>
+my @voices1 = map { $voice->rand } $motifs[0]->@*;
+
+# ... more code ...
+
+my @voices2 = map { $voice->rand } $motifs[1]->@*; </pre><div class="notes">Music::VoiceGen module by Jeremy Mates (AKA thrig) - I know you're out there! </div></div>
 <div class="slide">
 <h1>Links
 
