--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ If you want to follow along or reread what just happened, these slides are live 
 </h1><p><img src="https://placekitten.com/500/500" />
 
 
-</p><div class="notes">Also, this used to have a bunch of concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo. </div></div>
+</p><div class="notes">This used to have a bunch of descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo. </div></div>
 <div class="slide">
 <h1>Why Make Algorithmic Music?
 
@@ -120,13 +120,11 @@ If you want to follow along or reread what just happened, these slides are live 
 
 </p></li><li level="1"><p>How do you structure a tune?
 
-</p></li></ul class="incremental"><div class="notes">These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
+</p></li></ul class="incremental"><div class="notes">These are questions to answer if we want to follow traditional theory.
 
 But if we don't care about traditions, then anything goes. And MIDI is probably not your thing.
 
-The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar solos.
-
-There are as many answers as there are musicians. (And there are more ways to make algorithmic music than there are programmers.) </div></div>
+For instance, the idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar solos. </div></div>
 <div class="slide">
 <h1>Task::MusicBundle Modules
 
