--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ img#me05 {top: 43px;left: 36px;}
 
 </p><div class="notes">Let's talk about music!
 
-The first part will cover some concepts, which I will try to whip-though, so we can get to the algorithms.
+The first part will cover concepts, which I will try to whip-though, so we can get to the algorithms.
 
 If you want to follow along or reread what just happened, these slides are live at the link on the bottom of the pages. </div></div>
 <div class="slide">
