--- a/notes.html
+++ b/notes.html
@@ -9,7 +9,7 @@
 <p><b>1.</b> Algorithmic Music with Perl</p>
 <div style='opacity: 0.75; background-color: lightgray; font-size: larger;'>
 <p><b>Let's talk about music!</b></p>
-<p><b>The first part will cover some concepts, which I will try to whip-though, so we can get to the algorithms.</b></p>
+<p><b>The first part will cover concepts, which I will try to whip-though, so we can get to the algorithms.</b></p>
 <p><b>If you want to follow along or reread what just happened, these slides are live at the link on the bottom of the pages.</b></p>
 </div>
 <p><b>2.</b> What this *is* about</p>
